[package]
name = "provenance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
scraper = "*"
chrono = { version = "*", features = ["serde"] }
regex = "*"
lazy_static = "*"
regex-split = "*"
csv = "*"
rayon = "*"
tokio = { version = "1", features = ["full"] }
axum = { version = "*", features = ["tokio", "http1"] }
axum-server = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "*"
tower-http = { version = "*", features = ["fs", "trace"] }
